[project]
name = "ai-py-langgraph"
version = "0.1.0"
description = "基于 Python + LangGraph 构建的智能 AI Agent，支持工具调用和多轮对话"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
ai-agent = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]
include = ["main.py", "config.py"]

[dependency-groups]
dev = [
    "ipython>=9.14.1",
]
